; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-x-data.c_move_item_rates.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-x-data.c_move_item_rates.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.item = type { i64, i64, i64 }
%struct.index_item = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.item*, %struct.index_item*)* @move_item_rates to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @move_item_rates(%struct.item* %0, %struct.index_item* %1) #0 {
  %3 = alloca %struct.item*, align 8
  %4 = alloca %struct.index_item*, align 8
  store %struct.item* %0, %struct.item** %3, align 8
  store %struct.index_item* %1, %struct.index_item** %4, align 8
  %5 = load %struct.index_item*, %struct.index_item** %4, align 8
  %6 = getelementptr inbounds %struct.index_item, %struct.index_item* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.item*, %struct.item** %3, align 8
  %9 = getelementptr inbounds %struct.item, %struct.item* %8, i32 0, i32 2
  store i64 %7, i64* %9, align 8
  %10 = load %struct.index_item*, %struct.index_item** %4, align 8
  %11 = getelementptr inbounds %struct.index_item, %struct.index_item* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = load %struct.item*, %struct.item** %3, align 8
  %14 = getelementptr inbounds %struct.item, %struct.item* %13, i32 0, i32 1
  store i64 %12, i64* %14, align 8
  %15 = load %struct.index_item*, %struct.index_item** %4, align 8
  %16 = getelementptr inbounds %struct.index_item, %struct.index_item* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.item*, %struct.item** %3, align 8
  %19 = getelementptr inbounds %struct.item, %struct.item* %18, i32 0, i32 0
  store i64 %17, i64* %19, align 8
  %20 = load %struct.index_item*, %struct.index_item** %4, align 8
  %21 = getelementptr inbounds %struct.index_item, %struct.index_item* %20, i32 0, i32 2
  store i64 0, i64* %21, align 8
  %22 = load %struct.index_item*, %struct.index_item** %4, align 8
  %23 = getelementptr inbounds %struct.index_item, %struct.index_item* %22, i32 0, i32 1
  store i64 0, i64* %23, align 8
  %24 = load %struct.index_item*, %struct.index_item** %4, align 8
  %25 = getelementptr inbounds %struct.index_item, %struct.index_item* %24, i32 0, i32 0
  store i64 0, i64* %25, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
